--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,3 +40,7 @@ jobs:
         # Run Linter
         run: |
           make lint
+      - name: Run test
+        # Run test
+        run: |
+          make test
